Fixes #9671: Description field + generic methods fields in Technique editor are too small on IE11

--- a/builder/css/custom.css
+++ b/builder/css/custom.css
@@ -203,7 +203,8 @@ html, body, .Override.container{
 }
 
 textarea.form-control {
-    resize:none
+  resize:none;
+  min-height:34px;
 }
 
 .input-xs {
